<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new"
        android:title="@string/action_new"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_as"
        android:title="@string/action_save_as"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/button_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_print"
        android:title="@string/action_print"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_font_size"
        android:title="@string/action_font_size"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_language"
        android:title="@string/action_language"
        app:showAsAction="never" />
</menu>
